--- a/data/products.yaml
+++ b/data/products.yaml
@@ -72,6 +72,9 @@ machine-controller:
   description: Manage machines at cloud providers using a declarative Kubernetes API, compatible with the Kubernetes cluster-autoscaler.
   weight: 4
   shareImage: img/share-machine-controller.png
+  versions:
+    - release: main
+      name: main
 operatingsystemmanager:
   name: operatingsystemmanager
   logo: "/img/operatingsystemmanager/common/operating-system-manager-logo.png"
