Add machine controller documentation (#1696)
* add MC content

* add external-code renderer shortcode

* config updates

* fix typos

* add share image

* add blurp

* PR feedback

* remove outdated docs

* move docs into a main/ directory in anticipation of the upcoming 2.x lineage

* move docs for setting up vSphere Template VMs to the MC docs

* more cleanup

* restructure vsphere template VM docs

* more PR feedback

* move guide

--- a/data/products.yaml
+++ b/data/products.yaml
@@ -68,13 +68,23 @@ kubeone:
       name: v1.2
     - release: v1.0
       name: v1.0
+machine-controller:
+  name: machine-controller
+  title: machine-controller
+  textName: machine-controller
+  description: Manage machines at cloud providers using a declarative Kubernetes API, compatible with the Kubernetes cluster-autoscaler.
+  weight: 4
+  shareImage: img/share-machine-controller.png
+  versions:
+    - release: main
+      name: main
 operatingsystemmanager:
   name: operatingsystemmanager
   logo: "/img/operatingsystemmanager/common/operating-system-manager-logo.png"
   title: Operating System Manager
   textName: Operating System Manager
   description: Operating System Manager is responsible for creating and managing the required configurations for worker nodes in a Kubernetes cluster.
-  weight: 4
+  weight: 5
   shareImage: img/share-operatingsystemmanager.png
 kubelb:
   name: kubelb
@@ -82,7 +92,7 @@ kubelb:
   title: KubeLB
   textName: KubeLB
   description: KubeLB is a tool to centrally manage load balancers across multicloud and on-prem environments.
-  weight: 5
+  weight: 6
   shareImage: img/share-kubelb.png
   versions:
     - release: main
