--- a/data/products.yaml
+++ b/data/products.yaml
@@ -51,6 +51,8 @@ kubeone:
   versions:
     - release: main
       name: main
+    - release: v1.9
+      name: v1.9
     - release: v1.8
       name: v1.8
     - release: v1.7
