Update kubeone main docs to 1.11
Signed-off-by: Artiom Diomin <artiom@kubermatic.com>

--- a/data/products.yaml
+++ b/data/products.yaml
@@ -55,6 +55,8 @@ kubeone:
   versions:
     - release: main
       name: main
+    - release: v1.11
+      name: v1.11
     - release: v1.10
       name: v1.10
     - release: v1.9
