--- a/data/products.yaml
+++ b/data/products.yaml
@@ -92,29 +92,28 @@ kubelb:
       name: v1.1
     - release: v1.0
       name: v1.0
+developer-platform:
+  name: developer-platform
+  logo: "/img/developer-platform/common/logo.svg"
+  title: Kubermatic Developer Platform
+  description: Provision and manage all services from a single centralized catalog - powered by Kubernetes-style APIs.
+  weight: 4
+  shareImage: img/share-developer-platform.png
 operatingsystemmanager:
   name: operatingsystemmanager
   logo: "/img/operatingsystemmanager/common/operating-system-manager-logo.png"
   title: Operating System Manager
   textName: Operating System Manager
   description: Operating System Manager is responsible for creating and managing the required configurations for worker nodes in a Kubernetes cluster.
-  weight: 4
+  weight: 5
   shareImage: img/share-operatingsystemmanager.png
 machine-controller:
   name: machine-controller
   title: machine-controller
   textName: machine-controller
   description: Manage machines at cloud providers using a declarative Kubernetes API, compatible with the Kubernetes cluster-autoscaler.
-  weight: 5
+  weight: 6
   shareImage: img/share-machine-controller.png
   versions:
     - release: main
       name: main
-# do not yet reveal KDP to the public
-# developer-platform:
-#   name: developer-platform
-#   logo: "/img/developer-platform/common/logo.png"
-#   title: Kubermatic Developer Platform
-#   description: <TODO>
-#   weight: 6
-#   shareImage: img/share-developer-platform.png
