add instructions to generate password
Signed-off-by: Daniel Kraus <daniel.kraus@kubermatic.com>

--- a/content/developer-platform/setup/quickstart/data/dex.values.yaml
+++ b/content/developer-platform/setup/quickstart/data/dex.values.yaml
@@ -16,7 +16,7 @@ config:
   enablePasswordDB: true
   staticPasswords:
     - email: admin
-      hash: "$2a$10$2b2cU8CPhOTaGrs1HRQuAueS7JTT5ZHsHSzYiFPm1leZck7Mc8T4W"
+      hash: "<ADMIN_PASSWORD_HASH>"
       username: admin
       userID: 08a8684b-db88-4b73-90a9-3cd1661f5466
 
