Set ai agent feature to false in the quickstart
Signed-off-by: julioc-p <14-10820@usb.ve>

--- a/content/developer-platform/setup/quickstart/data/kdp-dashboard.values.yaml
+++ b/content/developer-platform/setup/quickstart/data/kdp-dashboard.values.yaml
@@ -22,6 +22,8 @@ dashboard:
     backend:
       frontProxyURL: https://api.<DOMAIN>
     features:
+      aiAgent:
+        enabled: false
       kubeconfigDownload:
         enabled: true
         serverCA: /app/_config/user-kubeconfig/ca.crt
