--- a/data/products.yaml
+++ b/data/products.yaml
@@ -88,6 +88,8 @@ kubelb:
   versions:
     - release: main
       name: main
+    - release: v1.2
+      name: v1.2
     - release: v1.1
       name: v1.1
     - release: v1.0
