--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,8 @@
 [build.environment]
 HUGO_VERSION = "0.150.0"
-GO_VERSION = "1.25.1"
 
 [context.production]
-command = "hugo --gc --minify"
+command = "hugo --minify"
 
 [context.deploy-preview]
 command = "hugo -D -F -b $DEPLOY_PRIME_URL"
