--- a/data/products.yaml
+++ b/data/products.yaml
@@ -121,3 +121,22 @@ machine-controller:
   versions:
     - release: main
       name: main
+kubermatic-virtualization:
+  name: kubermatic-virtualization
+  logo: "img/logo-kubermatic.svg"
+  title: Kubermatic-Virtualization
+  textName: Kube-V
+  description: Seamlessly modernize your infrastructure by building your private cloud entirely with Kubernetes.
+  weight: 1
+  shareImage: img/share-kubermatic.png
+  versions:
+    - release: main
+      name: main
+# do not yet reveal KDP to the public
+# developer-platform:
+#   name: developer-platform
+#   logo: "/img/developer-platform/common/logo.png"
+#   title: Kubermatic Developer Platform
+#   description: <TODO>
+#   weight: 6
+#   shareImage: img/share-developer-platform.png
