Publish Kubeone release v1.12
Signed-off-by: Archana Sawant <archupsawant@gmail.com>

--- a/data/products.yaml
+++ b/data/products.yaml
@@ -57,6 +57,8 @@ kubeone:
   versions:
     - release: main
       name: main
+    - release: v1.12
+      name: v1.12
     - release: v1.11
       name: v1.11
     - release: v1.10
