Add API docs for kubev

--- a/data/products.yaml
+++ b/data/products.yaml
@@ -134,6 +134,8 @@ kubermatic-virtualization:
   versions:
     - release: main
       name: main
+    - release: v1.0.0
+      name: v1.0.0
 # do not yet reveal KDP to the public
 # developer-platform:
 #   name: developer-platform
