--- a/data/products.yaml
+++ b/data/products.yaml
@@ -92,8 +92,8 @@ kubelb:
   versions:
     - release: main
       name: main
-    # - release: v1.3
-    #   name: v1.3
+    - release: v1.3
+      name: v1.3
     - release: v1.2
       name: v1.2
     - release: v1.1
